# src/model/driverModel.js
@@ -1,0 +1,19 @@
+import pgClient from "../config/pgClient.js"
+import DatabaseError from "../exception/DatabaseError.js"
+import bcrypt from 'bcrypt'
+
+const driverModel = {
+  checkEmail: async email => {
+    const result = await pgClient.query(`SELECT * FROM driver WHERE email = '${email}'`)
+    if(result.rowCount > 0) {
+      throw new DatabaseError('Email already exist', 'conflict')
+    }
+  },
+
+  insert: async data => {
+    const hashPassword = await bcrypt.hash(data.password, 12)
+    await pgClient.query(`INSERT INTO driver (username, email, password, route) VALUES ('${data.username}', '${data.email}', '${hashPassword}', '${data.route}')`)
+  }
+}
+
+export default driverModel
